@@ -8,6 +8,7 @@ malloc
 mpd-state
 null
 quotes
+rot13
 timer
 the-book-of-mozilla
 tuptime
