@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/07/11 00:20:58 $
+                     $Date: 2005/07/13 11:02:15 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which may be  usefull in everyday life  ;) There are
@@ -75,6 +75,8 @@ At the moment the collection include:
    '>/dev/null' is too long to type every time :)
 
  * quotes.txt - a collection of quotations, some are in Polish.
+
+ * rot13 - Performs an ROT13 'encryption' on stdin.
 
  * settitle - Sets the title of xterm, rxvt, Eterm, aterm and other
    xterm-compatible terminals.
